--- a/project/client/package.json
+++ b/project/client/package.json
@@ -7,7 +7,9 @@
     "start": "webpack serve"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.9.2",
     "bootstrap": "^5.3.0",
+    "dotenv-webpack": "^8.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
