--- a/project/client/package.json
+++ b/project/client/package.json
@@ -10,6 +10,8 @@
     "@openzeppelin/contracts": "^4.9.2",
     "bootstrap": "^5.3.0",
     "dotenv-webpack": "^8.0.1",
+    "ethers": "^6.6.2",
+    "headers": "^0.9.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
