--- a/project/client/package.json
+++ b/project/client/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.2",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "dotenv-webpack": "^8.0.1",
     "ethers": "^6.6.2",
